# google-timeline-export-parser

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/timelineparser/: __main__.py  cli.py  db.py  enricher.py  extractors.py  parser.py
tests/: test_db.py  test_enricher.py  test_extractors.py  test_parser.py
